feat: implement database-backed quick links with UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,6 @@
     {% include 'partials/view_dashboard.html' %}
     {% include 'partials/view_contacts.html' %}
     {% include 'partials/view_tasks.html' %}
-    
-    <!-- NEW: Project Views -->
     {% include 'partials/view_projects.html' %}
     {% include 'partials/view_project_detail.html' %}
 
@@ -19,5 +17,6 @@
     <!-- Модальные окна -->
     {% include 'partials/modal_contact.html' %}
     {% include 'partials/modal_task.html' %}
-    {% include 'partials/modal_project.html' %} <!-- NEW -->
+    {% include 'partials/modal_project.html' %}
+    {% include 'partials/modal_quick_link.html' %} <!-- NEW -->
 {% endblock %}
