feat: добавлена страница детального просмотра контактов (Досье) с проектами и задачами

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     {% include 'partials/view_contacts.html' %}
     {% include 'partials/view_tasks.html' %}
     {% include 'partials/view_projects.html' %}
+    
+    <!-- Detail Views -->
     {% include 'partials/view_project_detail.html' %}
+    {% include 'partials/view_contact_detail.html' %}
 
     <!-- Заглушки -->
     <div id="view-kb" class="view-section hidden text-center py-20 text-slate-400">
@@ -18,5 +21,5 @@
     {% include 'partials/modal_contact.html' %}
     {% include 'partials/modal_task.html' %}
     {% include 'partials/modal_project.html' %}
-    {% include 'partials/modal_quick_link.html' %} <!-- NEW -->
+    {% include 'partials/modal_quick_link.html' %}
 {% endblock %}
