feat: implement quick task capture modal and associated functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
     <!-- Модальные окна -->
     {% include 'partials/modal_contact.html' %}
     {% include 'partials/modal_task.html' %}
+    {% include 'partials/modal_quick_task.html' %}
     {% include 'partials/modal_project.html' %}
     {% include 'partials/modal_quick_link.html' %}
 {% endblock %}
