feat: add inbox view and associated functionality for task management

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% block content %}
     <!-- Вьюхи (Views) -->
     {% include 'partials/view_dashboard.html' %}
+    {% include 'partials/view_inbox.html' %}
     {% include 'partials/view_contacts.html' %}
     {% include 'partials/view_tasks.html' %}
     {% include 'partials/view_projects.html' %}
