feat: упрощённый хедер + страница-меню + импорт/экспорт JSON/CSV

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,9 @@
     <!-- Reports Views -->
     {% include 'partials/view_reports_weekly.html' %}
 
+    <!-- Menu -->
+    {% include 'partials/view_menu.html' %}
+
     <!-- Detail Views -->
     {% include 'partials/view_project_detail.html' %}
     {% include 'partials/view_meeting_detail.html' %}
